fix: total card footer border overlapping with card header border

--- a/frontend/src/components/CheckoutWrapper/Checkout/TotalCard/totalCard.scss
+++ b/frontend/src/components/CheckoutWrapper/Checkout/TotalCard/totalCard.scss
@@ -16,14 +16,14 @@
 	}
 
 	.card-footer {
-		border-width: 0px;
+		border-top-width: 0px;
 
 		> * {
 			flex: 1;
 		}
 
 		&.with-border {
-			border-width: 1px;
+			border-top-width: 1px;
 		}
 
 		#payment-request-button {
